--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.data.mongodb.uri=mongodb+srv://root:12345.com@cluster0.dbkudku.mongodb.net/college?retryWrites=true&w=majority
+logging.level.telran=debug
+
+
