--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.data.mongodb.uri=mongodb+srv://root:12345.com@cluster0.dbkudku.mongodb.net/college?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<host-name from mongo cloud>/college?retryWrites=true&w=majority
 logging.level.telran=debug
 
 
